--- a/index.html
+++ b/index.html
@@ -3,37 +3,33 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- displays site properly based on user's device -->
-
     <link
       rel="icon"
       type="image/png"
       sizes="32x32"
       href="./images/favicon-32x32.png"
     />
-
     <title>Frontend Mentor | Order summary card</title>
-
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div class="page-wrapper">
+    <main class="page-wrapper">
       <div class="main-box">
         <div class="image">
-          <img src="images/illustration-hero.svg" alt="hero image" />
+          <img src="images/illustration-hero.svg" alt="" aria-hidden="true"/>
         </div>
         <div class="box-info">
-          <h2 class="card-title">Order Summary</h2>
+          <h1 class="card-title">Order Summary</h1>
           <p class="card-desc">
             You can now listen to millions of songs, audiobooks, and podcasts on
             any device anywhere you like!
           </p>
         </div>
         <div class="plan-box">
-          <img src="images/icon-music.svg" alt="music icon" />
+          <img src="images/icon-music.svg" alt="" aria-hidden="true"/>
           <div class="plan-details">
             <p><strong>Annual Plan</strong></p>
-            <span id="price">$59.99/year</span>
+            <p class="price">$59.99/year</p>
           </div>
           <div class="change-btn">
             <a href="#">Change</a>
@@ -41,28 +37,15 @@
         </div>
         <div class="buttons">
           <a href="#" class="btn btn-payment">Proceed to Payment</a>
-          <a href="#" id="cancel-btn">Cancel Order</a>
+          <a href="#" class="cancel-btn">Cancel Order</a>
         </div>
       </div>
-      <div class="attribution">
+    </main>
+		      <footer class="attribution">
         Challenge by
         <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
           >Frontend Mentor</a
         >. Coded by <a href="https://austinthornley.com">Austin Thornley</a>.
-      </div>
-    </div>
-
-    <!-- 
-  Order Summary
-
-  
-
-  Annual Plan
-  $59.99/year
-
-  Change
-
-  Proceed to Payment
-  Cancel Order -->
+			</footer>
   </body>
 </html>
